// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`double-md-test 1`] = `
MockViewModelRepositoryState {
  "activeEditorLine": null,
  "activeImageFile": null,
  "activeSegmentIndex": 1,
  "activeTextFile": null,
  "billingPricing": {
    "newUserInitialTokensCount": 0,
    "servicePrices": {
      "gptImagePromptTokenCost": 0,
      "gptTextPromptTokenCost": 0,
      "latexCompilationTokenCostPerSecond": 0,
      "markdownCompilationTokenCostPerSecond": 0,
    },
    "tokenPrices": [],
    "userRegularRefill": {
      "refillPeriodSeconds": 0,
      "refillTokensAmount": 0,
    },
  },
  "billingPricingRequestState": "ok",
  "captchaBypassToken": undefined,
  "cloneRequestState": "unknown",
  "codeCheckRequest": "unknown",
  "compileErrorResult": {
    "errors": [],
  },
  "compileSuccessResult": {
    "segments": [
      {
        "text": "my md",
        "type": "md",
      },
      {
        "type": "empty",
      },
    ],
  },
  "currentEmail": null,
  "currentFolderPath": "",
  "currentProgram": {
    "parameters": {
      "roundStrategy": "firstMeaningDigit",
    },
    "segments": [
      {
        "parameters": {
          "visible": true,
        },
        "text": "my md",
        "type": "md",
      },
      {
        "parameters": {
          "visible": false,
        },
        "text": "a = 10",
        "type": "computational",
      },
    ],
  },
  "currentView": "closed",
  "editModeForFilename": false,
  "editModeForProjectTitle": false,
  "editorNavigationTarget": null,
  "email": "",
  "emailRequest": "unknown",
  "ephemeralFolders": [],
  "expandProblemViewer": false,
  "files": [],
  "filesToDelete": [],
  "getFilesRequestState": "unknown",
  "getProjectRequestState": "unknown",
  "getProjectsRequestState": "unknown",
  "id": 0,
  "instructionExpanded": false,
  "isAuthenticated": false,
  "isAutocompleteLoading": false,
  "isFileDraggedToManager": false,
  "isRegistration": false,
  "language": "ru",
  "lastOpenedProjectUuid": undefined,
  "lastProgram": {
    "parameters": {
      "roundStrategy": "firstMeaningDigit",
    },
    "segments": [
      {
        "parameters": {
          "visible": true,
        },
        "text": "my md",
        "type": "md",
      },
      {
        "parameters": {
          "visible": false,
        },
        "text": "a = 10",
        "type": "computational",
      },
    ],
  },
  "lastVerifiedCode": null,
  "loadTextFileRequestState": "unknown",
  "location": "/project/default",
  "loginRequest": "unknown",
  "mode": "markdown",
  "passwordSetRequest": "unknown",
  "pdfClickPosition": null,
  "pdfNavigationTarget": null,
  "pdfUpdated": 0,
  "pdfUri": undefined,
  "pendingSegmentEditorCursor": null,
  "previousActiveSegmentIndex": 0,
  "project": undefined,
  "projectIsReadonly": false,
  "projectPromptRequestState": "unknown",
  "projects": [],
  "redoEnabled": false,
  "saveProjectRequestState": "unknown",
  "saveTextFileRequestState": "unknown",
  "search": undefined,
  "showFileManager": false,
  "showProjectPromptModal": false,
  "showSearch": false,
  "showShareModal": false,
  "showTour": false,
  "synctexEditorPosition": null,
  "textFileContent": "",
  "toasts": [],
  "tokenBalance": 0,
  "undoEnabled": true,
}
`;

exports[`double-md-test 2`] = `
MockViewModelRepositoryState {
  "activeEditorLine": null,
  "activeImageFile": null,
  "activeSegmentIndex": 1,
  "activeTextFile": null,
  "billingPricing": {
    "newUserInitialTokensCount": 0,
    "servicePrices": {
      "gptImagePromptTokenCost": 0,
      "gptTextPromptTokenCost": 0,
      "latexCompilationTokenCostPerSecond": 0,
      "markdownCompilationTokenCostPerSecond": 0,
    },
    "tokenPrices": [],
    "userRegularRefill": {
      "refillPeriodSeconds": 0,
      "refillTokensAmount": 0,
    },
  },
  "billingPricingRequestState": "ok",
  "captchaBypassToken": undefined,
  "cloneRequestState": "unknown",
  "codeCheckRequest": "unknown",
  "compileErrorResult": {
    "errors": [],
  },
  "compileSuccessResult": {
    "segments": [
      {
        "text": "my md",
        "type": "md",
      },
      {
        "text": "",
        "type": "md",
      },
      {
        "type": "empty",
      },
    ],
  },
  "currentEmail": null,
  "currentFolderPath": "",
  "currentProgram": {
    "parameters": {
      "roundStrategy": "firstMeaningDigit",
    },
    "segments": [
      {
        "parameters": {
          "visible": true,
        },
        "text": "my md",
        "type": "md",
      },
      {
        "parameters": {
          "visible": true,
        },
        "text": "",
        "type": "md",
      },
      {
        "parameters": {
          "visible": false,
        },
        "text": "a = 10",
        "type": "computational",
      },
    ],
  },
  "currentView": "closed",
  "editModeForFilename": false,
  "editModeForProjectTitle": false,
  "editorNavigationTarget": null,
  "email": "",
  "emailRequest": "unknown",
  "ephemeralFolders": [],
  "expandProblemViewer": false,
  "files": [],
  "filesToDelete": [],
  "getFilesRequestState": "unknown",
  "getProjectRequestState": "unknown",
  "getProjectsRequestState": "unknown",
  "id": 0,
  "instructionExpanded": false,
  "isAuthenticated": false,
  "isAutocompleteLoading": false,
  "isFileDraggedToManager": false,
  "isRegistration": false,
  "language": "ru",
  "lastOpenedProjectUuid": undefined,
  "lastProgram": {
    "parameters": {
      "roundStrategy": "firstMeaningDigit",
    },
    "segments": [
      {
        "parameters": {
          "visible": true,
        },
        "text": "my md",
        "type": "md",
      },
      {
        "parameters": {
          "visible": true,
        },
        "text": "",
        "type": "md",
      },
      {
        "parameters": {
          "visible": false,
        },
        "text": "a = 10",
        "type": "computational",
      },
    ],
  },
  "lastVerifiedCode": null,
  "loadTextFileRequestState": "unknown",
  "location": "/project/default",
  "loginRequest": "unknown",
  "mode": "markdown",
  "passwordSetRequest": "unknown",
  "pdfClickPosition": null,
  "pdfNavigationTarget": null,
  "pdfUpdated": 0,
  "pdfUri": undefined,
  "pendingSegmentEditorCursor": null,
  "previousActiveSegmentIndex": 1,
  "project": undefined,
  "projectIsReadonly": false,
  "projectPromptRequestState": "unknown",
  "projects": [],
  "redoEnabled": false,
  "saveProjectRequestState": "unknown",
  "saveTextFileRequestState": "unknown",
  "search": undefined,
  "showFileManager": false,
  "showProjectPromptModal": false,
  "showSearch": false,
  "showShareModal": false,
  "showTour": false,
  "synctexEditorPosition": null,
  "textFileContent": "",
  "toasts": [],
  "tokenBalance": 0,
  "undoEnabled": true,
}
`;
